<?xml version="1.0" encoding="utf-8"?>

<!-- Main layout box -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@android:color/black">
    
    <!-- The title text area -->
    <TextView 
    		android:text="@string/app_name" 
    		android:id="@+id/CustomFont"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent"
    		android:textColor="@color/title_color"
    		android:gravity="top|center"
    		android:textSize="@dimen/title_size">
    </TextView>
    
    <!-- the description below the title -->
    <TextView 
    		android:text="@string/app_desc" 
    		android:id="@+id/TextViewTopTitleDesc"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent"
    		android:textColor="@color/logo_color"
    		android:gravity="top|center"
    		android:textSize="@dimen/desc_size">
    </TextView>

	<!-- the frame containing the image for the splash screen -->
	<FrameLayout 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:id="@+id/frameLayout1">  	
    	<ImageView 
    			android:id="@+id/imageView1" 
    			android:src="@drawable/splash" 
    			android:layout_width="match_parent" android:layout_height="238dp">
    	</ImageView>
	</FrameLayout>

	<!-- the version text below the image on the splash screen -->
	<TextView 
			android:text="@string/app_version_info" 
			android:layout_height="fill_parent" 
			android:layout_width="fill_parent"
			android:id="@+id/TextViewBottomVersion"
			android:gravity="center"
			android:lineSpacingExtra="@dimen/version_spacing"
			android:textColor="@color/version_color" 
			android:textSize="@dimen/version_size">
	</TextView>
	
</LinearLayout>
