<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgrnd_clear">
    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ImageView_MenuHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"></ImageView>
        <TextView
            android:id="@+id/CustomFont"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/screen_title_size"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="@android:color/white"
            android:textColor="@color/title_color"></TextView>
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ImageView_MenuHeader2"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"></ImageView>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
			<LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="fill">
                <ImageButton
                    android:id="@+id/ImageButton_Avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avatar"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/avatar_size"
                    android:minHeight="@dimen/avatar_size"
                    android:scaleType="fitXY"></ImageButton>
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">           
		            <TextView 
		            	android:id="@+id/TextView_Nickname" 
		            	android:textSize="@dimen/help_text_size" 
		           	 	android:layout_gravity="fill_horizontal|center" 
		            	android:layout_height="wrap_content" 
		            	android:text="@string/login_username" 
		            	android:textStyle="bold" 
		            	android:textColor="@color/title_color" 
		            	android:layout_width="match_parent" 
		            	android:gravity="center_horizontal">
		            </TextView>
		            <EditText
		                android:id="@+id/EditText_Nickname"
		                android:layout_height="wrap_content"
		                android:maxLength="20"
		                android:layout_width="fill_parent"
		                android:maxLines="1"
		                android:inputType="textPersonName"></EditText>
		        </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/TextView_Email"
                 android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center"
                android:text="@string/login_email"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" android:textColor="@color/title_color" android:layout_width="match_parent" android:gravity="center_horizontal"></TextView>
            <EditText
                android:id="@+id/EditText_Email"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress">
            </EditText>
            <TextView 
            	android:id="@+id/TextView_Gender" 
            	android:textSize="@dimen/help_text_size" 
            	android:layout_height="wrap_content" 
            	android:text="@string/login_gender" 
            	android:gravity="center_horizontal" 
            	android:textStyle="bold" 
            	android:layout_width="match_parent" 
            	android:textColor="@color/title_color">
            </TextView>
            <Spinner 
            	android:layout_height="wrap_content" 
            	android:id="@+id/Spinner_Gender" 
            	android:layout_width="fill_parent">
            </Spinner>
            <TextView
            	android:id="@+id/TextView_Password" 
            	android:textSize="@dimen/help_text_size" 
            	android:layout_gravity="fill_horizontal|center" 
            	android:layout_height="wrap_content" 
            	android:text="@string/login_password"
            	android:textStyle="bold" 
            	android:textColor="@color/title_color" 
            	android:layout_width="match_parent" 
            	android:gravity="center_horizontal">
            </TextView>
            <LinearLayout
                android:id="@+id/LinearLayoutPassword"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Button 
                	android:id="@+id/Button_Password" 
                	android:layout_height="wrap_content" 
                	android:text="@string/login_button_pwd" 
                	android:layout_width="wrap_content">
                </Button>
                <TextView
                    android:id="@+id/TextView_Password_Info"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textSize="@dimen/help_text_size"
                    android:textStyle="bold"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>